--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     This page is operating in a secured lab environment with full participant consent.
   </div>
 
+  <!-- 📤 Discord Webhook Submission -->
   <script>
     function sendToDiscord(event) {
       event.preventDefault();
@@ -149,5 +150,19 @@
       alert("Submission received ✅");
     }
   </script>
+
+  <!-- 💬 Live Chat Widget (Tawk.to) -->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function() {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/686c82558d299b19083881aa/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+
 </body>
 </html>
